--- a/index.html
+++ b/index.html
@@ -1,249 +1,63 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+
 <head>
-<meta charset="utf-8"/>
-<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<title>index</title>
-<style id="applicationStylesheet" type="text/css">
-	.mediaViewInfo {
-		--web-view-name: Web 1920 – 1;
-		--web-view-id: Web_1920___1;
-		--web-center-vertically: true;
-		--web-enable-deep-linking: true;
-	}
-	:root {
-		--web-view-ids: Web_1920___1;
-	}
-	* {
-		margin: 0;
-		padding: 0;
-	}
-	#Web_1920___1 {
-		position: absolute;
-		box-sizing: border-box;
-		transform: translateY(-50%);
-		top: 50%;
-		background: #E5E5E5;
-		width: 1920px;
-		height: 1076px;
-		background-color: rgba(255,255,255,1);
-		overflow: hidden;
-		margin: 0;
-		padding: 0;
-		--web-view-name: Web 1920 – 1;
-		--web-view-id: Web_1920___1;
-		--web-center-vertically: true;
-		--web-enable-deep-linking: true;
-	}
-	#Star_Wars_RPG {
-		position: absolute;
-		left: 737px;
-		top: 15px;
-		overflow: visible;
-		width: 439px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Segoe UI;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 70px;
-		color: rgba(112,112,112,1);
-	}
-	.Rectangle_1 {
-		position: absolute;
-		overflow: visible;
-		width: 125px;
-		height: 125px;
-		left: 626px;
-		top: 136px;
-	}
-	.Rectangle_6 {
-		position: absolute;
-		overflow: visible;
-		width: 125px;
-		height: 125px;
-		left: 438px;
-		top: 380px;
-	}
-	.Rectangle_10 {
-		position: absolute;
-		overflow: visible;
-		width: 125px;
-		height: 125px;
-		left: 1357px;
-		top: 380px;
-	}
-	.Rectangle_2 {
-		position: absolute;
-		overflow: visible;
-		width: 125px;
-		height: 125px;
-		left: 796px;
-		top: 136px;
-	}
-	.Rectangle_9 {
-		position: absolute;
-		overflow: visible;
-		width: 125px;
-		height: 125px;
-		left: 756px;
-		top: 759px;
-	}
-	.Rectangle_3 {
-		position: absolute;
-		overflow: visible;
-		width: 125px;
-		height: 125px;
-		left: 1158px;
-		top: 136px;
-	}
-	.Rectangle_7 {
-		position: absolute;
-		overflow: visible;
-		width: 125px;
-		height: 125px;
-		left: 1083px;
-		top: 759px;
-	}
-	.Rectangle_4 {
-		position: absolute;
-		overflow: visible;
-		width: 125px;
-		height: 125px;
-		left: 977px;
-		top: 136px;
-	}
-	.Rectangle_8 {
-		position: absolute;
-		overflow: visible;
-		width: 125px;
-		height: 125px;
-		left: 918px;
-		top: 759px;
-	}
-	#Your_Hero {
-		position: absolute;
-		left: 371px;
-		top: 270px;
-		overflow: visible;
-		width: 287px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Segoe UI;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 65px;
-		color: rgba(112,112,112,1);
-	}
-	#Villian {
-		position: absolute;
-		left: 1339px;
-		top: 270px;
-		overflow: visible;
-		width: 174px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Segoe UI;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 65px;
-		color: rgba(112,112,112,1);
-	}
-	#Enemies_Remaining {
-		position: absolute;
-		left: 703px;
-		top: 652px;
-		overflow: visible;
-		width: 516px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Segoe UI;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 60px;
-		color: rgba(112,112,112,1);
-	}
-	.Rectangle_5 {
-		position: absolute;
-		overflow: visible;
-		width: 161px;
-		height: 76px;
-		left: 878px;
-		top: 484px;
-	}
-	#VS_ {
-		position: absolute;
-		left: 878px;
-		top: 325px;
-		overflow: visible;
-		width: 165px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Segoe UI;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 120px;
-		color: rgba(112,112,112,1);
-	}
-</style>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
+
+	<title>Star Wars RPG</title>
 </head>
+
 <body>
-<div id="Web_1920___1">
-	<div id="Star_Wars_RPG">
-		<span>Star Wars RPG</span>
+
+	<h1>Star Wars RPG</h1>
+	<div class="top-container">
+		<div class="row">
+			<div class="col"><img src="http://lorempixel.com/output/abstract-q-c-200-200-10.jpg" alt=""></div>
+			<div class="col"><img src="http://lorempixel.com/output/abstract-q-c-200-200-10.jpg" alt=""></div>
+			<div class="col"><img src="http://lorempixel.com/output/abstract-q-c-200-200-10.jpg" alt=""></div>
+			<div class="col"><img src="http://lorempixel.com/output/abstract-q-c-200-200-10.jpg" alt=""></div>
+		</div>
+		<div class="row">
+			<div class="col-5">
+				<h1>HERO</h1>
+				<img src="http://lorempixel.com/output/abstract-q-c-400-400-5.jpg" class="card-img-top">
+			</div>
+			<div class="col-2">
+				<H1>VS.</H1>
+				<button class="btn btn-primary" type="submit">Attack</button>
+			</div>
+			<div class="col-5">
+				<H1>VILLIAN</H1>
+				<img src="http://lorempixel.com/output/abstract-q-c-400-400-5.jpg" class="card-img-top">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col"><img src="http://lorempixel.com/output/abstract-q-c-200-200-10.jpg" alt=""></div>
+			<div class="col"><img src="http://lorempixel.com/output/abstract-q-c-200-200-10.jpg" alt=""></div>
+			<div class="col"><img src="http://lorempixel.com/output/abstract-q-c-200-200-10.jpg" alt=""></div>
+			<div class="col"><img src="http://lorempixel.com/output/abstract-q-c-200-200-10.jpg" alt=""></div>
+		</div>
 	</div>
-	<svg class="Rectangle_1">
-		<rect fill="rgba(20,28,238,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_1" rx="0" ry="0" x="0" y="0" width="125" height="125">
-		</rect>
-	</svg>
-	<svg class="Rectangle_6">
-		<rect fill="rgba(20,28,238,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_6" rx="0" ry="0" x="0" y="0" width="125" height="125">
-		</rect>
-	</svg>
-	<svg class="Rectangle_10">
-		<rect fill="rgba(20,28,238,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_10" rx="0" ry="0" x="0" y="0" width="125" height="125">
-		</rect>
-	</svg>
-	<svg class="Rectangle_2">
-		<rect fill="rgba(20,28,238,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_2" rx="0" ry="0" x="0" y="0" width="125" height="125">
-		</rect>
-	</svg>
-	<svg class="Rectangle_9">
-		<rect fill="rgba(20,28,238,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_9" rx="0" ry="0" x="0" y="0" width="125" height="125">
-		</rect>
-	</svg>
-	<svg class="Rectangle_3">
-		<rect fill="rgba(20,28,238,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_3" rx="0" ry="0" x="0" y="0" width="125" height="125">
-		</rect>
-	</svg>
-	<svg class="Rectangle_7">
-		<rect fill="rgba(20,28,238,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_7" rx="0" ry="0" x="0" y="0" width="125" height="125">
-		</rect>
-	</svg>
-	<svg class="Rectangle_4">
-		<rect fill="rgba(20,28,238,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_4" rx="0" ry="0" x="0" y="0" width="125" height="125">
-		</rect>
-	</svg>
-	<svg class="Rectangle_8">
-		<rect fill="rgba(20,28,238,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_8" rx="0" ry="0" x="0" y="0" width="125" height="125">
-		</rect>
-	</svg>
-	<div id="Your_Hero">
-		<span>Your Hero</span>
-	</div>
-	<div id="Villian">
-		<span>Villian</span>
-	</div>
-	<div id="Enemies_Remaining">
-		<span>Enemies Remaining</span>
-	</div>
-	<svg class="Rectangle_5">
-		<rect fill="rgba(11,86,18,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="round" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_5" rx="0" ry="0" x="0" y="0" width="161" height="76">
-		</rect>
-	</svg>
-	<div id="VS_">
-		<span>VS.</span>
-	</div>
-</div>
+
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
+	<script src="assets\\javascript\\game.js"></script>
 </body>
+
 </html>
